--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,15 +43,13 @@ jobs:
     name: Terraform Format
     runs-on: ubuntu-latest
     needs: env
-    strategy:
-      matrix: ${{ fromJson(needs.env.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v2
 
       - name: Terraform Setup
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: ${{ matrix.env.tf_version }}
+          terraform_version: 1.0.0
 
       - name: Terraform Format
         working-directory: "./"
@@ -63,6 +61,7 @@ jobs:
     needs: env
     strategy:
       matrix: ${{ fromJson(needs.env.outputs.matrix) }}
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
 
